# Run

./: CMakeLists.txt  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  main.cpp
